@@ -225,7 +225,7 @@ include_once "include/page_header.php";
 <?php
 	if($_REQUEST["action"]=="showgraph" && $item_type != ITEM_VALUE_TYPE_LOG)
 	{
-		show_history($_REQUEST["itemid"],$_REQUEST["from"],$effectiveperiod);
+		show_history($_REQUEST["itemid"],$_REQUEST["from"],$_REQUEST["stime"],$effectiveperiod);
 	}
 	elseif($_REQUEST["action"]=="showvalues" || $_REQUEST["action"]=="showlatest")
 	{
